--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -1,11 +1,13 @@
 *
     box-sizing: border-box
+    margin: 0
+    padding: 0
 
 html,
 body
     margin: 0
     padding: 0
-    font-size: 16px
+    font-size: 14px
     font-family: "Roboto", "Arial", sans-serif
     line-height: 1.4
 
@@ -27,3 +29,6 @@ a
 
 .a-c
     align-items: center
+
+.j-c
+    justify-content: center
